# aismush

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN-goose-multi-client.md  PLAN-multi-provider-routing.md  README.md  install.ps1  install.sh  release.sh  start.ps1  start.sh
.claude/agents/: backend-engineer.md  code-reviewer.md  data-engineer.md  database-migration-specialist.md  debugger.md  devops-engineer.md  explorer.md  frontend-engineer.md  javascript-expert.md  rust-expert.md  security-reviewer.md  test-runner.md
.claude/skills/build-release/: SKILL.md
.claude/skills/database-migrations/: SKILL.md
.claude/skills/deploy-workers/: SKILL.md
.claude/skills/format-code/: SKILL.md
.claude/skills/javascript-deploy/: SKILL.md
.claude/skills/lint-code/: SKILL.md
.claude/skills/proxy-testing/: SKILL.md
.claude/skills/run-migrations/: SKILL.md
.claude/skills/run-plan/: SKILL.md
.claude/skills/rust-build/: SKILL.md
.github/workflows/: ci.yml  release.yml
bucket/: aismush.json
scripts/: aismush-start
src/: capture.rs  client.rs  cmd_compress.rs  compress.rs  config.rs  context.rs  cost.rs  dashboard.rs  db.rs  deps.rs  discovery.rs  embeddings.rs  file_cache.rs  forward.rs  hashes.rs  main.rs  memory.rs  prompts.rs  provider.rs  proxy_pool.rs  rate_governor.rs  router.rs  scan.rs  search.rs  setup.rs  state.rs  summarize.rs  symbols.rs  tokens.rs  tools.rs  transform.rs
website/: index.html
winget/: SkunkTech.AISmush.installer.yaml  SkunkTech.AISmush.locale.en-US.yaml
worker/: wrangler.toml
worker/src/: index.js
(+3 files in other folders)
