[package]
name = "aismush"
version = "0.2.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http1", "http2", "ring", "webpki-tokio"] }
rustls = "0.23"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
